// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toDeleteRole function should fail due to inexistent role 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
}
`;

exports[`testing toDeleteRole function should fail due to roleData null 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
}
`;

exports[`testing toDeleteRole function should return a failed report for a deleted role(isNot true) 1`] = `
Object {
  "message": "    
    expected: role 819382540350652502 to not be deleted
",
  "pass": false,
}
`;

exports[`testing toDeleteRole function should return a failed report for a found role with property role.deleted = true role (isNot true) 1`] = `
Object {
  "message": "    
    expected: role 819382540350652502 not deleted
    received: role was deleted before call the command '!removeRole 123'
",
  "pass": false,
}
`;

exports[`testing toDeleteRole function should return a failed report for a no deleted role (isNot false) 1`] = `
Object {
  "message": "    
    expected: role 819382540350652502 to be deleted
",
  "pass": false,
}
`;

exports[`testing toDeleteRole function should return a passed report for a deleted role(isNot false) 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toDeleteRole function should return a passed report for a found role with property role.deleted = true role (isNot false) 1`] = `
Object {
  "message": "    
    expected: role 819382540350652502 not deleted
    received: role was deleted before call the command '!deleteRole 123'
",
  "pass": false,
}
`;
